# book-archive-pro

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
src/: api_client.py  database.py  scanner.py
tests/: test_api_client.py  test_database.py  test_main.py  test_scanner.py
