[project]
name = "book-archive-pro"
version = "0.1.0"
description = ""
authors = [
    {name = "Goerge Laskaris",email = "gla@terraquantum.swiss"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pyzbar (>=0.1.9,<0.2.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
